<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskEditNameInput" />

    <Spinner
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskEditTagInput" />

    <CheckBox
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelUrgent"
        android:id="@+id/taskEditIsUrgentInput"
        android:checked="false" />

    <CheckBox
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelDone"
        android:id="@+id/taskEditIsDone"
        android:checked="false" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:onClick="onClickTaskEditOk"
            android:text="@string/ok"
            android:id="@+id/taskEditOk" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:onClick="onClickTaskEditCancel"
            android:text="@string/cancel"
            android:id="@+id/taskEditCancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="#E05335"
            android:onClick="onClickTaskDelete"
            android:text="@string/delete"
            android:id="@+id/taskEditDelete"
            android:layout_weight="0.33" />

    </LinearLayout>

    <Button
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:id="@+id/taskEditAddInterval"
        android:text="@string/newInterval"
        android:onClick="onClickEditTaskAddInterval" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskEditIntervals"/>

</LinearLayout>